--- a/html/buscarCliente.html
+++ b/html/buscarCliente.html
@@ -27,6 +27,6 @@
   <input type="submit" value="Buscar">
 </form> 
 
-<a href="index.html"><img src="../1.png"></a>
+<a href="../index.html"><img src="1.png"></a>
 </body>
 </html>
