--- a/html/buscarProducto.html
+++ b/html/buscarProducto.html
@@ -26,6 +26,6 @@
   <input type="submit" value="Buscar">
 </form> 
 
-<a href="index.html"><img src="../1.png"></a>
+<a href="../index.html"><img src="1.png"></a>
 </body>
 </html>
