--- a/html/insertarProducto.html
+++ b/html/insertarProducto.html
@@ -27,6 +27,6 @@
   <input type="submit" value="Insertar">
 </form><br> 
 
-<a href="index.html"><img src="../1.png"></a>
+<a href="../index.html"><img src="1.png"></a>
 </body>
 </html>
