--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
   <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-<a href="insertarProducto.html">	
+<a href="html/insertarProducto.html">	
 	<dl>  
 		<dt>Insertar productos</dt>
 		<dd>Use esta pestaña, si lo que quiere es insertar productos en nuestra base de datos</dd>
 
 	</dl>
 </a>
-<a href="buscarProducto.html">
+<a href="html/buscarProducto.html">
 	<dl>
 		<dt>Buscar productos</dt>
 		<dd>Use esta pestaña, para buscar productos sobre nuestra base de datos</dd>
 	</dl>
 </a>
-<a href="insertarCliente.html">	
+<a href="html/insertarCliente.html">	
 	<dl>
 		<dt>Alta de clientes</dt>
 		<dd>Use esta pestaña, si lo que quiere es dar de alta a nuevos clientes en nuestra base de datos</dd>
 	</dl>
 </a>
-<a href="buscarCliente.html">
+<a href="html/buscarCliente.html">
 	<dl>
 		<dt>Búsqueda de clientes</dt>
 		<dd>Use esta pestaña, para buscar clientes sobre nuestra base de datos</dd>
